[package]
name = "qexpr"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Typed query expressions (query algebra) for retrieval systems."
repository = "https://github.com/arclabs561/qexpr"
homepage = "https://github.com/arclabs561/qexpr"
documentation = "https://docs.rs/qexpr"
publish = true
readme = "README.md"
keywords = ["information-retrieval", "query", "ast", "search"]
categories = ["text-processing", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

